--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,45 @@
-# Compiled class file
-*.class
+# History files
+.Rhistory
+.Rapp.history
 
-# Log file
-*.log
+# Session Data files
+.RData
 
-# BlueJ files
-*.ctxt
+# User-specific files
+.Ruserdata
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Example code in package build process
+*-Ex.R
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Output files from R CMD build
+/*.tar.gz
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# pkgdown site
+docs/
+
+# translation temp files
+po/*~
