--- a/.github/workflows/deploy_shiny.yaml
+++ b/.github/workflows/deploy_shiny.yaml
@@ -7,15 +7,16 @@ on:
 
 
 jobs:
-  runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v2
-    - uses: r-lib/actions/setup-r@v1
+    steps:
+      - uses: actions/checkout@v2
+      - uses: r-lib/actions/setup-r@v1
 
 
-    - name: Deploy
-      env:
-        RSHINY_TOKEN: ${{ secrets.RSHINY_TOKEN}}
-        RSHINY_SECRET: ${{ secrets.RSHINY_SECRET}}
-      run: R R\deploy.R
+      - name: Deploy
+        env:
+          RSHINY_TOKEN: ${{ secrets.RSHINY_TOKEN}}
+          RSHINY_SECRET: ${{ secrets.RSHINY_SECRET}}
+        run: R R\deploy.R
