--- a/.github/workflows/deploy_shiny.yaml
+++ b/.github/workflows/deploy_shiny.yaml
@@ -19,4 +19,5 @@ jobs:
         env:
           RSHINY_TOKEN: ${{ secrets.RSHINY_TOKEN}}
           RSHINY_SECRET: ${{ secrets.RSHINY_SECRET}}
-        run: R R\deploy.R
+        run: source("R\deploy.R")
+        shell: Rscript {0} 
