--- a/.github/workflows/deploy_shiny.yaml
+++ b/.github/workflows/deploy_shiny.yaml
@@ -12,8 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@v1
 
+      - name: Install curl
+	run: |
+          sudo apt-get install libcurl4-openssl-dev
+
+      - uses: r-lib/actions/setup-r@v1
 
       - name: Deploy
         env:
