--- a/.github/workflows/deploy_shiny.yaml
+++ b/.github/workflows/deploy_shiny.yaml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Update apt-get
+        run: |
+          sudo apt-get update
+
       - name: Install curl
         run: |
           sudo apt-get install libcurl4-openssl-dev
